Implement option to download specific portions of Twitch VODs

--- a/YouTube Downloader/MainForm.resx
+++ b/YouTube Downloader/MainForm.resx
@@ -134,7 +134,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADE
-        AQAAAk1TRnQBSQFMAwEBAAEwAQABMAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        AQAAAk1TRnQBSQFMAwEBAAEIAQEBCAEBARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
         ARADAAEBAQABIAYAARD/ADIAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf/XAAH/AwAB/wMAAf8DAAH/
         AwAB/xcAAf/XAAH/DwAB/xcAAf/XAAH/DwAB/xcAAf/XAAH/DwAB/xcAAf/XAAH/DwAB/xcAAf/XAAH/
         DwAB/xcAAf/XAAH/DwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/9cAAf8jAAH/2wAB/wcAAf8DAAH/
@@ -151,6 +151,21 @@
     <value>True</value>
   </metadata>
   <metadata name="txtYoutubeLink.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="flpDownloadClip.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="chbDownloadClipFrom.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dpDownloadClipFrom.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="chbDownloadClipTo.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dpDownloadClipTo.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="btnBrowse.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -232,30 +247,27 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA2
-        BQAAAk1TRnQBSQFMAwEBAAEwAQABMAEAAQ4BAAEOAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABOAMA
-        AQ4DAAEBAQABIAUAAUABDBIAAx0BKQFgAVwBXQHNAY4BdQF/AfQDUAGbAxoBJQMBAQILAAEBAxQBGwNJ
-        AYcCVAGPAe4CWgFsAdUDKQE/qAABYgFeAV8BzgHZAbgBwwH/Ae0BzwHXAf8BsQGVAaQB+QNSAaMDHAEo
-        AwEBAgQAAxQBGwNMAZICXwHFAfsCeAHsAf8CcQHoAf8CWgFsAdWoAAF/AWgBdAHwAekBygHTAf8B8gHV
-        AdwB/wHuAdAB2AH/AbYBoAGmAfoDUwGlAxoBJQMQARUCTQFOAZUCXQHFAfwCcgHpAf8CagHkAf8CeAHs
-        Af8CVAGPAe6oAANEAXkBmwGFAZAB9gHsAc4B1gH/AfIB1QHcAf8B7gHRAdgB/wHBAaEBsQH8AVUBVAFV
-        Aa4DUQGiAl4BxgH8AnMB6QH/AmIB3gH/AnEB6AH/Al0BxQH8A0kBiKgAAwoBDgNEAXkBnQGGAY8B9QHs
-        Ac4B1gH/AfIB1QHcAf8B7wHRAdkB/wHDAa4BuQH9AY8BYgGfAf0BhgGBAeQB/wJyAegB/wJ0AekB/wJf
-        AcUB+wNMAZIDFAEbrAADDAEQA0QBegGgAYkBkwH2AewBzgHWAf8B8gHVAdwB/wHwAdMB2gH/AdkBuQHE
-        Af8BoQF2AZ0B/wGdAXQBogH/AZsBcQGcAf8BYwFfAWYB1QMsAUMDAgEDsAADCgEOA0cBgAGnAY4BmwH3
-        Ae0B0AHXAf8B7QHPAdgB/wGwAYYBmgH/Ab8BmQGpAf8B5wHIAdEB/wHvAdIB2gH/Ab8BoAGwAfwBcwFm
-        AWoB4gMWAR+0AAMPARQDUAGdAaoBkAGeAfoBtgGNAaAB/wHPAawBuQH/AfIB1QHcAf8B8QHUAdsB/wHu
-        AdAB2AH/AfAB0wHaAf8BrwGcAaQB+gNMAZCwAAMDAQQDIwEzAVkBWAFXAbcBlQFrAYEB+wG/AZkBqQH/
-        AfIB1QHcAf8B8QHUAdsB/wHTAbMBvQH+AbcBjwGgAfwBzgGtAbgB/gHlAcUBzwH/AXoBagFxAeisAAMa
-        ASUDPgFrAVYCVQG1AY0BfQFzAfYBkgF5AXwB/AHfAb4ByAH/AfIB1QHcAf8B3wG/AckB/wF2AWoBcQHh
-        A1IBoQFpAWMBZQHUAcwBqwG2Af4BqwGAAZUB/6gAAwcBCQNVAa0BjgGDAXcB9AGoAZoBiAH9AVYCVQG1
-        AWIBXgFfAdMB0AG6Ab0B/QHyAdUB3AH/AcEBnQGqAf4BWwFaAVsBvgMaASUDNAFUAWkBYwFmAdcBawFk
-        AWgB3agAAzwBZgGHAX4BbwHzAcoBtgGlAf8BjgGCAXcB9AM+AWoDRwGAAZEBfwGGAe8B8gHVAdwB/wHk
-        AcUBzgH/AYEBcgF6AeoDRQF8AxEBFwMxAU4DLgFHqAABXgFdAVsBywGXAYIBeQH4AYgBfQFyAfIDVQGt
-        AxoBJQMSARkBWwFZAVoBwgGbAYUBkAH2AeIBwgHNAf8B4wHDAc0B/wGHAXcBfwHuA0IBdQMNAREDAgED
-        qAADDAEQAV8CXQHKAzsBZQMHAQkIAAMKAQ4DQAFvAXABZQFpAeMBoQFvAYsB/wFxAWQBaQHhAzYBWQME
-        AQWsAAFCAU0BPgcAAT4DAAEoAwABOAMAAQ4DAAEBAQABAQUAAXAXAAP/AQABAwcAAQEfAAGABwABwAcA
-        AeAHAAHABwABgB8AAQwBBAYACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACo
+        BAAAAk1TRnQBSQFMAwEBAAEIAQEBCAEBAQ4BAAEOAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABOAMA
+        AQ4DAAEBAQABIAUAAUABDBIAAx0BKQNcAc0DZQH0A1ABmwMaASUDAQECCwABAQMUARsDSQGHAlQBYQHu
+        AloBXgHVAykBP6gAA14BzgHZAbgBwwH/Ae0BzwHXAf8BfQFqAXEB+QNSAaMDHAEoAwEBAgQAAxQBGwNM
+        AZICXwGKAfsCXQHsAf8CVgHoAf8CWgFeAdWoAANdAfAB6QHKAdMB/wHyAdUB3AH/Ae4B0AHYAf8BeAFw
+        AXMB+gNTAaUDGgElAxABFQJNAU4BlQI3AX8B/AJXAekB/wJPAeQB/wJdAewB/wJUAWEB7qgAA0QBeQNi
+        AfYB7AHOAdYB/wHyAdUB3AH/Ae4B0QHYAf8BfQFvAXYB/ANUAa4DUQGiAjgBfwH8AlgB6QH/AkcB3gH/
+        AlYB6AH/AjcBfwH8A0kBiKgAAwoBDgNEAXkBXgJZAfUB7AHOAdYB/wHyAdUB3AH/Ae8B0QHZAf8DqAH9
+        AY8BQAGfAf0BhgGBAeQB/wJXAegB/wJZAekB/wJfAYoB+wNMAZIDFAEbrAADDAEQA0QBegNiAfYB7AHO
+        AdYB/wHyAdUB3AH/AfAB0wHaAf8B2QG5AcQB/wGhAVsBnQH/AZ0BWQGiAf8BmwFWAZwB/wNeAdUDLAFD
+        AwIBA7AAAwoBDgNHAYADbQH3Ae0B0AHXAf8B7QHPAdgB/wGwAYYBmgH/Ab8BmQGpAf8B5wHIAdEB/wHv
+        AdIB2gH/AX0BbwF1AfwDYQHiAxYBH7QAAw8BFANQAZ0BdAFpAW8B+gG2AY0BoAH/Ac8BrAG5Af8B8gHV
+        AdwB/wHxAdQB2wH/Ae4B0AHYAf8B8AHTAdoB/wF2AW4BcgH6A0wBkLAAAwMBBAMjATMDVwG3AXACXwH7
+        Ab8BmQGpAf8B8gHVAdwB/wHxAdQB2wH/AZ0BfwGHAf4BeQFpAW8B/AGYAX8BggH+AeUBxQHPAf8DXwHo
+        rAADGgElAz4BawNVAbUDYgH2AWoBXgFhAfwB3wG+AcgB/wHyAdUB3AH/Ad8BvwHJAf8DYQHhA1IBoQNg
+        AdQBlgF/AYAB/gGrAYABlQH/qAADBwEJA1UBrQNlAfQBqAGaAYgB/QNVAbUDXQHTAakCqAH9AfIB1QHc
+        Af8BiwJ/Af4DWQG+AxoBJQM0AVQDXQHXA14B3agAAzwBZgNfAfMBygG2AaUB/wNlAfQDPgFqA0cBgANi
+        Ae8B8gHVAdwB/wHkAcUBzgH/A1wB6gNFAXwDEQEXAzEBTgMuAUeoAANbAcsBbQFdAVwB+ANnAfIDVQGt
+        AxoBJQMSARkDWQHCA2IB9gHiAcIBzQH/AeMBwwHNAf8DYQHuA0IBdQMNAREDAgEDqAADDAEQA10BygM7
+        AWUDBwEJCAADCgEOA0ABbwNfAeMBoQFUAYsB/wNhAeEDNgFZAwQBBawAAUIBTQE+BwABPgMAASgDAAE4
+        AwABDgMAAQEBAAEBBQABcBcAA/8BAAEDBwABAR8AAYAHAAHABwAB4AcAAcAHAAGAHwABDAEEBgAL
 </value>
   </data>
   <metadata name="cmsPlaylistOptions.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
